<?xml version="1.0"?>
<package format="2">
  <name>nav_sim</name>
  <version>1.0.0</version>
  <description>The nav_sim package</description>

  <maintainer email="rottertarmenation.y11.r18@gmail.com">RyuYamamoto</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
