<?xml version="1.0"?>
<package format="3">
  <name>nav_sim</name>
  <version>0.0.0</version>
  <description>The nav_sim package</description>
  <maintainer email="rottertarmenation.y11.r18@gmail.com">RyuYamamoto</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_sim_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
